k8s/aws/users/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users-api
          image: 992382688515.dkr.ecr.ap-southeast-1.amazonaws.com/todo-users:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          readinessProbe:
            httpGet:
              path: /health    # Change this path if your app uses a different health check path
              port: 3000        # The port your application is running on
            initialDelaySeconds: 5  # Time to wait before the first probe
            periodSeconds: 10       # Time between each probe
            successThreshold: 1     # Minimum consecutive successes for the pod to be marked "ready"
            failureThreshold: 5     # Number of consecutive failures before marking the pod "unready"
          livenessProbe:
            httpGet:
              path: /health    # Optional liveness probe if you want to check app health periodically
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 15
            failureThreshold: 5
          volumeMounts:
            - name: efs-vol
              mountPath: /app/user-logs
      volumes:
        - name: efs-vol
          persistentVolumeClaim: 
            claimName: efs-pvc
