k8s/aws/users/users-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "users-ingress"
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:992382688515:certificate/2c9852d9-6fa4-4608-8202-a732a1ab584f
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/load-balancer-name: users-alb
  labels:
    app: users
spec:
  ingressClassName: alb
  rules:
    - host: users-service-api.k8s.servicemind.asia
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "users-service"
                port:
                  number: 80
